Prove a shadow is still current before reading it (grm-p9y)
A write-through shadow is not a synonym for the bank. It is a COPY, current
only as long as every switch keeps updating it. grm-mej.2 increment 2 answered
a WRITE_THROUGH load from tracked in-state with no proof of that, and both of
its real-ROM outputs were confidently wrong -- 0 for 2 on the write-through
half, found by a user disassembler pass on grm-ii6.

The shape is not exotic. It is the standard interrupt-handler idiom: switch the
latch DIRECTLY, leaving the shadow holding the interrupted bank, do the work,
then restore with a bare LDA shadow / STA latch.

  megaman NMI   D54E STA $C004   ; -> bank 4, does NOT touch $42
                D551 JSR $9000
                D56E LDA $42     ; still the INTERRUPTED bank
                D571 STA $C000,X ; was "bank -> 4". Wrong.
  wizwarr NMI   FF9E STA $8000   ; -> bank 0, does NOT store back to $00
                FFA1 JSR $EE55
                FFA4 LDA $00     ; still the INTERRUPTED bank
                FFA6 STA $8000   ; was "bank -> 0". Wrong.

WHAT RULES OUT EVERY VALUE-BASED FIX: wizwarr's ff9e "bank -> 0" is CORRECT and
ffa6 "bank -> 0" two instructions later is WRONG. Same value, same handler,
same cell. Only coherence separates them.

So BankMirrors now retains, per cell, the mechanism writes whose own backward
walk found it -- the switches it is known to be kept in step with -- and
mirroredByte gates WRITE_THROUGH on a bounded backward walk: a store into the
cell is COHERENT; a mechanism write outside that paired set is STALE (the bug);
a call is STALE; a join or a non-fall-through predecessor is STALE; the
function entry or no predecessor at all is COHERENT (the caller maintains it);
budget exhausted is STALE. ROM_IDENTIFYING does not come here -- a ROM byte
cannot go stale.

The call rule is deliberately blunter than the bead's "a call owning nothing is
harmless": that needs the analyzer's call-effect map inside the strategy and
buys nothing meas